added --enable-preview compile arg in build.gradle.kts