@@ -20,6 +20,11 @@ dependencies {
     testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine:5.9.2")
 }
 
-tasks.getByName<Test>("test") {
-    useJUnitPlatform()
+tasks {
+    compileJava {
+        options.compilerArgs.add("--enable-preview")
+    }
+    getByName<Test>("test") {
+        useJUnitPlatform()
+    }
 }
